scss/style.scss
@use "abstracts" as *;
@use "pages";
@use "components";
@use "util/breakpoints" as u;

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

a,
h1,
h2,
h3,
h4 {
  font-family: $font-poppins;
}

html {
  font-size: 62.5%;
  scroll-behavior: smooth;
}

body {
  font-family: $font-poppins;
}

a {
  text-decoration: none;
  list-style: none;
  text-transform: uppercase;
  font-family: $font-raleway;
  font-weight: 900;
}

ul {
  list-style: none;
  padding: 0;
  margin-right: auto;
}

button,
input[type="submit"],
input[type="reset"] {
  background: none;
  color: inherit;
  border: none;
  padding: 0;
  outline: inherit;
}

textarea {
  resize: none !important;
}

.visually-hidden {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
  border: 0;
}

.reveal {
  opacity: 0;
  transform: translateY(20px);
  transition: opacity 0.5s ease-out, transform 0.5s ease-out;
}

.reveal-loaded {
  opacity: 1;
  transform: translateY(0);
}

.inner-wrapper {
  width: 80%;
  margin: auto;
  @include u.breakpoint(small) {
    width: 60%;
  }
}

.title {
  font-weight: 600;
  font-size: $text-xl;
}

.btn {
  cursor: pointer;
  color: $secondary;
  background-color: $secondary;
  width: 50%;
  height: 5%;
  padding: 0.5rem;
  font-weight: 600;
  position: relative;
  z-index: 0;
  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
  @include u.breakpoint(large) {
    padding: 1rem;
  }
  span {
    text-align: left;
    position: absolute;
    color: $primary;
    display: block;
    text-transform: uppercase;
    letter-spacing: 3px;
    transform-origin: center left;
    transition: $transition;
    position: relative;
    z-index: 1;
    @media (max-width: 350px) {
      font-size: $text-xs;
    }
    .showcase-links & {
      @include u.breakpoint(tiny) {
        padding-right: 2rem;
      }
    }
  }
  em {
    position: absolute;
    height: 1px;
    background: $primary;
    width: 30%;
    top: 50%;
    transform: scaleX(0.25);
    transform-origin: center right;
    transition: $transition;
    z-index: 1;
    .showcase-links & {
      width: 3rem;
      right: 5px;
    }
  }
  &:before,
  &:after {
    content: "";
    background: $third;
    height: 50%;
    width: 0;
    position: absolute;
    transition: 0.3s cubic-bezier(0.785, 0.135, 0.15, 0.86);
  }
  &:before {
    top: 0;
    left: 0;
    right: auto;
  }
  &:after {
    bottom: 0;
    right: 0;
    left: auto;
  }
  &:hover {
    &:before {
      width: 100%;
      right: 0;
      left: auto;
    }
    &:after {
      width: 100%;
      left: 0;
      right: auto;
    }
    span {
      color: $secondary;
    }
    em {
      background: $secondary;
      transform: scaleX(0.6);
    }
  }
}

.bold {
  color: #38d39f;
}

.showcase-button {
  width: auto;
  color: $secondary;
  background-color: white;
  span {
    color: $secondary;
    @media (max-width: 350px) {
      font-size: 0.7rem;
      padding: 0.25rem;
    }
  }
  em {
    background-color: $secondary;
    display: none;
    @include u.breakpoint(tiny) {
      display: block;
    }
  }
}

// Fullpage styling
.fp-scrollable .fp-section {
  height: 100vh !important;
}

.fp-overflow.fp-table {
  display: inline-flex;
}

#fp-nav.fp-right {
  display: none;
  @include u.breakpoint(small) {
    display: block;
    right: 10rem;
    span {
      height: 20px !important;
      width: 20px !important;
      border-radius: 0% !important;
      background-color: $secondary;
      border: 3px solid $secondary;
      transition: $transition;
      margin: 0 !important;
      .fp-viewing-works & {
        background-color: white;
        border: 3px solid white;
      }
      &:hover,
      &.active,
      &:focus {
        height: 20px;
        width: 20px;
        transform: rotate(225deg);
        // left: 10px;
        transition: $transition;
        background-color: transparent;
        margin: 0 !important;
        border-radius: 0% !important;
      }
    }
    .active {
      span {
        height: 20px;
        width: 20px;
        transform: rotate(225deg);
        background: transparent;
        &:hover,
        &.active,
        &:focus {
          height: 20px;
          width: 20px;
          transform: rotate(225deg);
          // left: 10px;
          transition: $transition;
          background-color: transparent;
        }
      }
    }
  }
}

#fp-nav ul li,
.fp-slidesNav ul li {
  border-radius: 0;
  height: 4rem;
}

